<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ctiwww</name>
  <version>0.0.0</version>
  <description> ctiwww</description>
  <maintainer email="1072233276@qq.com">ljy</maintainer>
  <author>ljy</author>
  <license>BSD</license>

  <!-- <depend>ament_index_cpp</depend>
  <depend>cti_msgs</depend>
  <depend>cti_vector_map_msgs</depend>
  <depend>cti_rblite_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend> -->

  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

